# dj-lib-goodizer

./: .gitignore  CHOICES.md  CMakeLists.txt  CMakePresets.json  DJ_Library_Prep_Software_Specification.docx  README.md  vcpkg.json
.github/workflows/: build.yml  ci.yml  wasm.yml
.playwright-mcp/: page-2026-06-21T13-16-54-939Z.yml  page-2026-06-21T13-17-05-901Z.yml  page-2026-06-21T13-18-18-629Z.yml
app/: AppDatabase.cpp  AppDatabase.h  CMakeLists.txt  ImportController.cpp  ImportController.h  ImportSession.cpp  ImportSession.h  LibraryModel.cpp  LibraryModel.h  MainWindow.cpp  MainWindow.h  ProcessController.cpp  ProcessController.h  WasmBridge.cpp  Worker.h  WorkerSession.cpp  WorkerSession.h  main.cpp
cli/: CMakeLists.txt  CliCommands.cpp  CliCommands.h  main.cpp
cmake/: Version.h.in
core/: CMakeLists.txt
core/include/djcore/: Version.h
core/include/djcore/analysis/: AnalysisConfig.h  AnalysisPipeline.h  Flags.h  IAnalyzer.h
core/include/djcore/analysis/analyzers/: LoudnessDynamicsAnalyzer.h  PhaseMonoAnalyzer.h  SilenceDetector.h  StereoWidthAnalyzer.h
core/include/djcore/audio/: AudioDecoder.h  AudioEncoder.h  AudioError.h  Dither.h  FormatInfo.h  PcmBuffer.h  Resampler.h  WavIo.h
core/include/djcore/db/: AnalysisResultRepository.h  AuditLogRepository.h  Database.h  ProfileRepository.h  Schema.h  TrackRepository.h
core/include/djcore/jobs/: AnalysisBatch.h  JobControl.h  ParallelFor.h
core/include/djcore/model/: AnalysisResult.h  AuditLogEntry.h  Enums.h  ProcessingJob.h  TargetProfile.h  Track.h
core/include/djcore/processing/: IOperation.h  Operations.h  PerceptualOps.h  ProcessingEngine.h
core/include/djcore/profile/: DefaultProfiles.h
core/src/: Version.cpp
core/src/analysis/: AnalysisPipeline.cpp  Flags.cpp
core/src/analysis/analyzers/: LoudnessDynamicsAnalyzer.cpp  PhaseMonoAnalyzer.cpp  SilenceDetector.cpp  StereoWidthAnalyzer.cpp
core/src/audio/: AudioDecoder.cpp  AudioEncoder.cpp  Dither.cpp  FfmpegBackend.h  FfmpegDecoder.cpp  PcmBuffer.cpp  Resampler.cpp  WavIo.cpp
core/src/db/: AnalysisResultRepository.cpp  AuditLogRepository.cpp  Database.cpp  ProfileRepository.cpp  Schema.cpp  TrackRepository.cpp
core/src/jobs/: AnalysisBatch.cpp  JobControl.cpp  ParallelFor.cpp
core/src/model/: Enums.cpp
core/src/processing/: Operations.cpp  PerceptualOps.cpp  ProcessingEngine.cpp
core/src/profile/: DefaultProfiles.cpp
packaging/: README.md
packaging/linux/: build-appimage.sh  dj-lib-goodizer.desktop
packaging/windows/: installer.iss
tests/: CMakeLists.txt  analysis_test.cpp  audio_test.cpp  cli_e2e_test.cpp  db_test.cpp  import_session_test.cpp  jobs_test.cpp  perceptual_test.cpp  processing_test.cpp  smoke_test.cpp
tests/e2e/: package-lock.json  package.json  playwright.config.ts  serve.cjs
tests/e2e/mock/: index.html
tests/e2e/tests/: flows.spec.ts  helpers.ts
